--- a/src/main/resources/com/example/serviceappointmentmanagementsystem/Home.fxml
+++ b/src/main/resources/com/example/serviceappointmentmanagementsystem/Home.fxml
@@ -1,24 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.SplitMenuButton?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Line?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="526.0" prefWidth="690.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.serviceappointmentmanagementsystem.Home">
+<AnchorPane prefHeight="526.0" prefWidth="690.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.serviceappointmentmanagementsystem.Home">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff5c" height="50.0" layoutX="-2.0" layoutY="-6.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="696.0" />
       <Label layoutX="68.0" layoutY="5.0" text="Service Appointment Management System">
@@ -37,7 +25,7 @@
                               <Font name="Eras Bold ITC" size="25.0" />
                            </font>
                         </Label>
-                        <TextField layoutX="412.0" layoutY="91.0" prefHeight="26.0" prefWidth="218.0" />
+                        <TextField fx:id="addName" layoutX="412.0" layoutY="91.0" prefHeight="26.0" prefWidth="218.0" />
                         <Label layoutX="499.0" layoutY="62.0" text="Name">
                            <font>
                               <Font name="Candara Bold" size="17.0" />
@@ -53,9 +41,9 @@
                               <Font name="Candara Bold" size="17.0" />
                            </font>
                         </Label>
-                        <TextField layoutX="412.0" layoutY="158.0" prefHeight="26.0" prefWidth="218.0" />
-                        <TextField layoutX="411.0" layoutY="222.0" prefHeight="26.0" prefWidth="218.0" />
-                        <Button layoutX="502.0" layoutY="408.0" mnemonicParsing="false" text="Add">
+                        <TextField fx:id="addNumber" layoutX="412.0" layoutY="158.0" prefHeight="26.0" prefWidth="218.0" />
+                        <TextField fx:id="addEmail" layoutX="411.0" layoutY="222.0" prefHeight="26.0" prefWidth="218.0" />
+                        <Button layoutX="502.0" layoutY="408.0" mnemonicParsing="false" onAction="#onAddData" text="Add">
                            <font>
                               <Font name="Candara Bold" size="14.0" />
                            </font>
@@ -64,17 +52,17 @@
                            <image>
                               <Image url="@../../../images/aaa.png" />
                            </image></ImageView>
-                        <DatePicker layoutX="410.0" layoutY="368.0" prefHeight="26.0" prefWidth="219.0" />
+                        <DatePicker fx:id="addDate" layoutX="410.0" layoutY="368.0" prefHeight="26.0" prefWidth="219.0" />
                         <Label layoutX="504.0" layoutY="334.0" text="Date">
                            <font>
                               <Font name="Candara Bold" size="17.0" />
                            </font>
                         </Label>
-                        <SplitMenuButton layoutX="412.0" layoutY="296.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="217.0" text="Select Type">
+                        <SplitMenuButton fx:id="addType" layoutX="412.0" layoutY="296.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="217.0" text="Select Type">
                           <items>
-                            <MenuItem mnemonicParsing="false" text="Type A" />
-                            <MenuItem mnemonicParsing="false" text="Type B" />
-                              <MenuItem mnemonicParsing="false" text="Type C" />
+                            <MenuItem fx:id="typeA" mnemonicParsing="false" onAction="#selectTypeA" text="Type A" />
+                            <MenuItem fx:id="typeB" mnemonicParsing="false" onAction="#selectTypeB" text="Type B" />
+                              <MenuItem fx:id="typeC" mnemonicParsing="false" onAction="#selectTypeC" text="Type C" />
                           </items>
                         </SplitMenuButton>
                         <Label layoutX="448.0" layoutY="260.0" prefHeight="22.0" prefWidth="168.0" text="Appointment Type">
