--- a/src/main/resources/com/example/serviceappointmentmanagementsystem/Home.fxml
+++ b/src/main/resources/com/example/serviceappointmentmanagementsystem/Home.fxml
@@ -1,12 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.SplitMenuButton?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="526.0" prefWidth="690.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.serviceappointmentmanagementsystem.Home">
+<AnchorPane prefHeight="526.0" prefWidth="690.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.serviceappointmentmanagementsystem.Home">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff5c" height="50.0" layoutX="-2.0" layoutY="-6.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="696.0" />
       <Label layoutX="68.0" layoutY="5.0" text="Service Appointment Management System">
@@ -48,7 +59,7 @@
                               <Font name="Candara Bold" size="14.0" />
                            </font>
                         </Button>
-                        <ImageView fitHeight="333.0" fitWidth="378.0" layoutY="-3.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="452.0" fitWidth="405.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../../images/aaa.png" />
                            </image></ImageView>
@@ -82,15 +93,36 @@
                           <content>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="458.0" prefWidth="423.0">
                                  <children>
-                                    <TableView prefHeight="458.0" prefWidth="422.0">
-                                      <columns>
-                                          <TableColumn fx:id="showID" prefWidth="75.0" text="ID" />
-                                        <TableColumn prefWidth="109.00000762939453" text="Name" />
-                                        <TableColumn prefWidth="71.40003967285156" text="Contact" />
-                                          <TableColumn fx:id="showDate" prefWidth="91.79998779296875" text="Date" />
-                                          <TableColumn fx:id="showType" prefWidth="76.0" text="Type" />
-                                      </columns>
-                                    </TableView>
+                                    <Label layoutX="102.0" layoutY="14.0" text="Email">
+                                       <font>
+                                          <Font name="System Bold" size="18.0" />
+                                       </font>
+                                    </Label>
+                                    <TextArea fx:id="colContact" layoutX="175.0" layoutY="42.0" prefHeight="418.0" prefWidth="86.0" />
+                                    <TextArea fx:id="colName" layoutX="75.0" layoutY="42.0" prefHeight="418.0" prefWidth="101.0" />
+                                    <TextArea fx:id="colID" layoutY="40.0" prefHeight="417.0" prefWidth="75.0" />
+                                    <TextArea fx:id="colDate" layoutX="261.0" layoutY="42.0" prefHeight="418.0" prefWidth="89.0" />
+                                    <TextArea fx:id="colType" layoutX="349.0" layoutY="42.0" prefHeight="418.0" prefWidth="82.0" />
+                                    <Label layoutX="12.0" layoutY="13.0" text="Name">
+                                       <font>
+                                          <Font name="System Bold" size="18.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="185.0" layoutY="13.0" text="Contact">
+                                       <font>
+                                          <Font name="System Bold" size="18.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="278.0" layoutY="14.0" text="Date">
+                                       <font>
+                                          <Font name="System Bold" size="18.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="367.0" layoutY="14.0" text="Type">
+                                       <font>
+                                          <Font name="System Bold" size="18.0" />
+                                       </font>
+                                    </Label>
                                  </children>
                               </AnchorPane>
                           </content>
@@ -110,7 +142,7 @@
                               <Font name="Candara Bold" size="17.0" />
                            </font>
                         </Label>
-                        <DatePicker layoutX="531.0" layoutY="274.0" prefHeight="26.0" prefWidth="137.0" />
+                        <DatePicker fx:id="addDate" layoutX="531.0" layoutY="274.0" prefHeight="26.0" prefWidth="137.0" />
                         <SplitMenuButton layoutX="530.0" layoutY="147.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="134.0" text="Select Type">
                            <items>
                               <MenuItem mnemonicParsing="false" text="Type A" />
@@ -124,7 +156,7 @@
                            </font>
                         </Label>
                         <TextField layoutX="531.0" layoutY="209.0" prefHeight="26.0" prefWidth="135.0" />
-                        <Button layoutX="527.0" layoutY="342.0" mnemonicParsing="false" onAction="#onReadData" text="Search">
+                        <Button layoutX="527.0" layoutY="342.0" mnemonicParsing="false" onAction="#search" text="Search">
                            <font>
                               <Font name="Candara Bold" size="14.0" />
                            </font>
@@ -152,7 +184,7 @@
                               <Font name="Candara Bold" size="17.0" />
                            </font>
                         </Label>
-                        <Label layoutX="365.0" layoutY="119.0" text="Contact :">
+                        <Label layoutX="365.0" layoutY="119.0" text="ID Number">
                            <font>
                               <Font name="Candara Bold" size="17.0" />
                            </font>
@@ -162,13 +194,13 @@
                               <Font name="Candara Bold" size="17.0" />
                            </font>
                         </Label>
-                        <TextField layoutX="475.0" layoutY="117.0" prefHeight="26.0" prefWidth="186.0" />
-                        <DatePicker layoutX="116.0" layoutY="242.0" prefHeight="26.0" prefWidth="186.0" />
-                        <SplitMenuButton layoutX="115.0" layoutY="177.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="188.0" text="Select Type">
+                        <TextField fx:id="cancel" layoutX="475.0" layoutY="117.0" prefHeight="26.0" prefWidth="186.0" />
+                        <DatePicker fx:id="addDate" layoutX="116.0" layoutY="242.0" prefHeight="26.0" prefWidth="186.0" />
+                        <SplitMenuButton fx:id="addType" layoutX="115.0" layoutY="177.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="188.0" text="Select Type">
                            <items>
-                              <MenuItem mnemonicParsing="false" text="Type A" />
-                              <MenuItem mnemonicParsing="false" text="Type B" />
-                              <MenuItem mnemonicParsing="false" text="Type C" />
+                              <MenuItem fx:id="typeA" mnemonicParsing="false" onAction="#selectTypeA" text="Type A" />
+                              <MenuItem fx:id="typeB" mnemonicParsing="false" onAction="#selectTypeB" text="Type B" />
+                              <MenuItem fx:id="typeC" mnemonicParsing="false" onAction="#selectTypeC" text="Type C" />
                            </items>
                         </SplitMenuButton>
                         <Label layoutX="487.0" layoutY="30.0" text="Cancle">
@@ -176,18 +208,18 @@
                               <Font name="Eras Bold ITC" size="20.0" />
                            </font>
                         </Label>
-                        <Label layoutX="18.0" layoutY="120.0" text="Contact :">
+                        <Label layoutX="18.0" layoutY="120.0" text="ID Number">
                            <font>
                               <Font name="Candara Bold" size="17.0" />
                            </font>
                         </Label>
-                        <TextField layoutX="116.0" layoutY="117.0" prefHeight="26.0" prefWidth="186.0" />
-                        <Button layoutX="128.0" layoutY="354.0" mnemonicParsing="false" text="Reschedule">
+                        <TextField fx:id="reNum" layoutX="116.0" layoutY="117.0" prefHeight="26.0" prefWidth="186.0" />
+                        <Button layoutX="128.0" layoutY="354.0" mnemonicParsing="false" onAction="#Reschedule" text="Reschedule">
                            <font>
                               <Font name="Candara Bold" size="14.0" />
                            </font>
                         </Button>
-                        <Button layoutX="525.0" layoutY="189.0" mnemonicParsing="false" text="Cancle">
+                        <Button layoutX="525.0" layoutY="189.0" mnemonicParsing="false" onAction="#cancel" text="Cancle">
                            <font>
                               <Font name="Candara Bold" size="14.0" />
                            </font>
